--- a/index.ipynb
+++ b/index.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,21 +614,21 @@
     "    x2 = sorted_values[1][0]\n",
     "    y2 = sorted_values[1][1]\n",
     "    y_int = y2 - m*x2\n",
-    "    return inty_int"
+    "    return int(y_int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100.0"
+       "100"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,11 +639,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_intercept([0, 200, 400], [10, 400, 700]) # 10"
    ]
