--- a/index.ipynb
+++ b/index.ipynb
@@ -609,12 +609,12 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    m = slope(x_values, y_values)\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
-    "    x2 = sorted_values[-1][0]\n",
-    "    y2 = sorted_values[-1][1]\n",
-    "    y_int = y2 - m*x2\n",
-    "    return int(y_int)"
+    "    highest = sorted_values[-1]\n",
+    "    if m == None:\n",
+    "        m = slope(x_values, y_values)\n",
+    "    offset = highest[1] - m*highest[0]\n",
+    "    return offset"
    ]
   },
   {
