--- a/index.ipynb
+++ b/index.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,12 +614,12 @@
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
     "    offset = highest[1] - m*highest[0]\n",
-    "    return int(offset)"
+    "    return offset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "100.0"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 106,
    "metadata": {
     "scrolled": true
    },
@@ -647,10 +647,10 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "10.0"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
