--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -673,7 +673,9 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    "
+    "    sorted_values = sorted_points(x_values, y_values)\n",
+    "    highest = sorted_values[-1]\n",
+    "    lowest"
    ]
   },
   {
