--- a/index.ipynb
+++ b/index.ipynb
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    pass"
+    "    sorted_val"
    ]
   },
   {
