--- a/index.ipynb
+++ b/index.ipynb
@@ -727,7 +727,7 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    sorted_val"
+    "    sorted_values = sorted_point"
    ]
   },
   {
