--- a/index.ipynb
+++ b/index.ipynb
@@ -727,7 +727,8 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    sorted_values = sorted_point"
+    "    sorted_values = sorted_points(x_values, y_values)\n",
+    "    "
    ]
   },
   {
