--- a/index.ipynb
+++ b/index.ipynb
@@ -732,7 +732,7 @@
     "    lowest = sorted_values[0]\n",
     "    m = slope(x_values, y_values)\n",
     "    b = y_intercept(x_values, y_values)\n",
-    "    x\n",
+    "    x = x_values\n",
     "    return "
    ]
   },
