--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -722,13 +722,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    m = slope(x_values, y_values)\n",
-    "    b = y_intercept(x_values, y_values)\n",
+    "    m = slope\n",
+    "    b = y_intercept\n",
     "    def y(x):\n",
     "        return m*x + b"
    ]
