--- a/index.ipynb
+++ b/index.ipynb
@@ -848,11 +848,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
+    "trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
    ]
   },
   {
@@ -861,7 +861,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trace_show_line"
+    "trace_show_line"
    ]
   },
   {
